--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "enzyme": "^2.7.0",
+    "enzyme-to-json": "^1.4.5",
+    "jest-fetch-mock": "^1.0.6",
     "react-scripts": "0.8.5"
   },
   "dependencies": {
